--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,7 @@ dev = [
     "types-psutil>=7.0.0.20250601",
     "types-python-dateutil>=2.9.0.20250516",
     "types-tqdm>=4.67.0.20250516",
+    "python-dotenv>=1.1.0",
 ]
 
 [tool.uv]
