chore: ignore mypy errors for certain deps for now
- deal with this later

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,3 +1,17 @@
 [mypy]
 
 warn_unused_ignores = True
+
+# TODO: remove these once the type stubs are available
+
+[mypy-rouge_score.*]
+ignore_missing_imports = True
+
+[mypy-argilla.*]
+ignore_missing_imports = True
+
+[mypy-datasets.*]
+ignore_missing_imports = True
+
+[mypy-IPython.*]
+ignore_missing_imports = True
