ci: adjust release-please-config for pharia-studio-sdk

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -5,7 +5,7 @@
     ".": {
       "extra-files": [
         {
-          "jsonpath": "$.package[?(@.name.value=='pharia-inference-sdk')].version",
+          "jsonpath": "$.package[?(@.name.value=='pharia-studio-sdk')].version",
           "path": "uv.lock",
           "type": "toml"
         }
