--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,7 @@ dev = [
     "types-tabulate>=0.9.0.20241207",
     "types-tensorflow>=2.18.0.20250516",
     "matplotlib>=3.10.3",
+    "nbconvert>=7.16.6",
 ]
 
 [tool.uv]
