--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "pharia-studio-sdk"
 version = "0.1.3"
 description = ""
 authors = [{ name = "Max Hammer", email = "max.hammer@aleph-alpha.com" }]
-requires-python = ">=3.12,<3.13"
+requires-python = ">=3.10,<3.13"
 readme = "README.md"
 dependencies = [
     "pydantic>=2.11.5",
@@ -14,7 +14,7 @@ dependencies = [
     "argilla>=2.8.0",
     "sacrebleu>=2.5.1",
     "rouge-score>=0.1.2",
-    "pharia-inference-sdk>=0.1.2",
+    "pharia-inference-sdk>=0.1.5",
 ]
 
 [[tool.uv.index]]
@@ -31,7 +31,7 @@ test = [
     "pytest>=8.3",
     "pytest-xdist>=3.6.1",
     "pytest-asyncio>=0.26.0",
-    "numpy>=2.3.0",
+    "numpy<=2.3.0",
     "pandas>=2.3.0",
 ]
 dev = [
