--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,8 +58,13 @@ dev = [
     "types-simplejson>=3.20.0.20250326",
     "types-tabulate>=0.9.0.20241207",
     "types-tensorflow>=2.18.0.20250516",
+]
+docs = [
     "sphinx>=8.2.3",
     "sphinx-rtd-theme>=3.0.2",
+    "myst-parser>=4.0.1",
+    "sphinx-design>=0.6.1",
+    "sphinx-copybutton>=0.5.2",
 ]
 
 [tool.uv]
