--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ dev = [
     "types-simplejson>=3.20.0.20250326",
     "types-tabulate>=0.9.0.20241207",
     "types-tensorflow>=2.18.0.20250516",
+    "types-decorator>=5.1.8.20240310",
 ]
 docs = [
     "sphinx>=8.2.3",
