--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "pharia-studio-sdk"
 version = "0.1.4"
 description = ""
 authors = [{ name = "Max Hammer", email = "max.hammer@aleph-alpha.com" }]
-requires-python = ">=3.11,<3.13"
+requires-python = ">=3.10,<3.13"
 readme = "README.md"
 dependencies = [
     "pydantic>=2.11.5",
@@ -61,9 +61,9 @@ dev = [
     "types-decorator>=5.1.8.20240310",
 ]
 docs = [
-    "sphinx>=8.2.3",
+    "sphinx>=7.0.0,<8.0.0",
     "sphinx-rtd-theme>=3.0.2",
-    "myst-parser>=4.0.1",
+    "myst-parser>=3.0.0,<4.0.0",
     "sphinx-design>=0.6.1",
     "sphinx-copybutton>=0.5.2",
 ]
