--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,14 @@ dev = [
     "types-simplejson>=3.20.0.20250326",
     "types-tabulate>=0.9.0.20241207",
     "types-tensorflow>=2.18.0.20250516",
+    "types-decorator>=5.1.8.20240310",
+]
+docs = [
+    "sphinx>=7.0.0,<8.0.0",
+    "sphinx-rtd-theme>=3.0.2",
+    "myst-parser>=3.0.0,<4.0.0",
+    "sphinx-design>=0.6.1",
+    "sphinx-copybutton>=0.5.2",
 ]
 
 [tool.uv]
