--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,26 +1,25 @@
-# .readthedocs.yaml
-# Read the Docs configuration file
+# Read the Docs configuration file for Sphinx projects
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
-# Required
 version: 2
 
-# Set the OS, Python version and other tools you might need
 build:
   os: ubuntu-22.04
   tools:
     python: "3.11"
   jobs:
-    # according to https://github.com/readthedocs/readthedocs.org/issues/4912#issuecomment-1992286540
     post_create_environment:
-      - python -m pip install uv
+    - pip install uv
     post_install:
-      - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH uv sync --dev
+    - UV_PROJECT_ENVIRONMENT=$READTHEDOCS_VIRTUALENV_PATH uv sync --group docs
+    - pip list
 
-# Build documentation in the "docs/" directory with Sphinx
+python:
+  install:
+    - method: pip
+      path: .
+      extra_requirements:
+        - docs
+
 sphinx:
   configuration: docs/source/conf.py
-# Optionally build your docs in additional formats such as PDF and ePub
-# formats:
-#    - pdf
-#    - epub
