--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "sacrebleu>=2.5.1",
     "rouge-score>=0.1.2",
     "pharia-inference-sdk>=0.1.5",
+    "opentelemetry-api>=1.12.0",
+    "opentelemetry-sdk>=1.12.0",
 ]
 
 [[tool.uv.index]]
