chore: run test and lint before dependabot automerge

--- a/.github/workflows/dependabot-automerge.yml
+++ b/.github/workflows/dependabot-automerge.yml
@@ -1,13 +1,14 @@
 name: Dependabot auto-merge
 on: pull_request
 
+
 permissions:
   contents: write
   pull-requests: write
 
 jobs:
-  quality-checks:
-    uses: ./.github/workflows/quality-checks.yml
+  test:
+    uses: ./.github/workflows/test.yml
     if: github.event.pull_request.user.login == 'dependabot[bot]'
     permissions:
       contents: read
@@ -16,7 +17,7 @@ jobs:
 
   auto-approve:
     runs-on: ubuntu-latest
-    needs: [quality-checks]
+    needs: [test]
     permissions:
       pull-requests: write
     if: github.actor == 'dependabot[bot]'
