--- a/.github/workflows/dependabot-automerge.yml
+++ b/.github/workflows/dependabot-automerge.yml
@@ -14,6 +14,7 @@ jobs:
       contents: read
       pull-requests: write
       actions: write
+    secrets: inherit
 
   auto-approve:
     runs-on: ubuntu-latest
